# museum-guide

./: .gitignore
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8dbcbf70f366_initial_schema.py  dcc06e533c92_collect_tracking.py
backend/app/: config.py  crawl_guobo.py  db.py  fetch_museum_images.py  fill_by_category.py  main.py  models.py  regenerate_placeholders.py  schemas.py  schemas_collect.py  seed.py  seed_batch.py  seed_from_baike.py  seed_from_wiki.py  seed_guobo.py  seed_guobo_full.py  seed_narrations_only.py
backend/app/collect/: __init__.py  __main__.py  base.py  llm_extractor.py  pipeline.py  refiner.py  registry.py
backend/app/collect/sources/: __init__.py  baike.py  official_base.py  official_guobo.py  official_henan.py  wiki.py  wiki_list.py
backend/app/data/: guobo_exhibits.json  museums_exhibits.json
backend/app/data/raw/fake/: 1_司母戊鼎.txt  (+1 more)
backend/app/routers/: admin_collect.py  chat.py  feedback.py  museums.py  narrate.py  recognize.py
backend/app/services/: collect_runner.py  geo.py  model_router.py  narration.py
backend/app/static/admin/: index.html
backend/app/tests/: conftest.py  test_admin_collect_api.py  test_chat_api.py  test_collect_base.py  test_collect_pipeline.py  test_collect_sources.py  test_collect_sources_official.py  test_db.py  test_feedback_api.py  test_geo.py  test_llm_extractor.py  test_model_router.py  test_models.py  test_museums_api.py  test_narrate_api.py  test_narration_service.py  test_recognize_api.py  test_refiner.py
backend/scripts/: manual_test.py
(+35 files in other folders)
